lld/test/error-atom-content-bytes.objtxt
# RUN: not lld-core %s 2> %t.err
# RUN:   FileCheck < %t.err %s

#
# Test that an out of range byte value produces a readable error.
#

---
atoms:
    - name:         entry
      scope:        hidden
      content:      [ A5, 1234, 00, 4F ]
  
...


# CHECK:       error: Content hex byte out of range
# CHECK:       1234

